more server/proxy info